k8s/tukano-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tukano-ingress
  namespace: tukano
spec:
  ingressClassName: nginx
  rules:
      - http:
          paths:
            - path: /rest/
              pathType: Prefix
              backend:
                service:
                  name: tukano-users-shorts-service
                  port:
                    number: 8080
            - path: /rest/blobs
              pathType: Prefix
              backend:
                service:
                  name: tukano-blobs-service
                  port:
                    number: 8080
